<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <TextView
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:autofillHints=""
        android:background="#A15165B5"
        android:gravity="bottom|end"
        android:padding="20dp"
        android:text=""
        android:textSize="45sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/custombutton"
            android:onClick="onDigit"
            android:text="@string/_9"
            android:textSize="45sp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/custombutton"
            android:onClick="onDigit"
            android:text="@string/_8"
            android:textSize="45sp" />

        <Button
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/custombutton"
            android:onClick="onDigit"
            android:text="@string/_7"
            android:textSize="45sp" />

        <Button
            android:id="@+id/buttondiv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/custombutton"
            android:onClick="OnOperator"
            android:text="@string/div"
            android:textSize="45sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/custombutton"
            android:onClick="onDigit"
            android:text="@string/_6"
            android:textSize="45sp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/custombutton"
            android:onClick="onDigit"
            android:text="5"
            android:textSize="45sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/custombutton"
            android:onClick="onDigit"
            android:text="@string/_4"
            android:textSize="45sp" />

        <Button
            android:id="@+id/buttonmulti"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/custombutton"
            android:onClick="OnOperator"
            android:text="@string/multi"
            android:textSize="45sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/custombutton"
            android:onClick="onDigit"
            android:text="@string/_3"
            android:textSize="45sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/custombutton"
            android:onClick="onDigit"
            android:text="@string/_2"
            android:textSize="45sp" />

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/custombutton"
            android:onClick="onDigit"
            android:text="@string/_1"
            android:textSize="45sp" />

        <Button
            android:id="@+id/buttonadd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/custombutton"
            android:onClick="OnOperator"
            android:text="@string/add"
            android:textSize="45sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/button0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/custombutton"
            android:onClick="onDigit"
            android:text="@string/_0"
            android:textSize="45sp" />

        <Button
            android:id="@+id/buttondot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/custombutton"
            android:onClick="onDot"
            android:text="@string/dot"
            android:textSize="45sp" />

        <Button
            android:id="@+id/buttoncut"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/custombutton"
            android:onClick="onBackSpace"
            android:text="@string/cross"
            android:textSize="45sp" />

        <Button
            android:id="@+id/buttonsub"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/custombutton"
            android:onClick="OnOperator"
            android:text="@string/sub"
            android:textSize="45sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/buttonclear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="2"
            android:background="@drawable/custombutton"
            android:onClick="OnClear"
            android:text="@string/clear"
            android:textSize="35sp" />

        <Button
            android:id="@+id/buttonequal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="3"
            android:background="@drawable/custombutton"
            android:onClick="OnEqual"
            android:text="@string/equal"
            android:textSize="50sp" />



    </LinearLayout>



</LinearLayout>